Loc purge and cleanup, more concepts

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -16,12 +16,12 @@
  job_gpm_tec_precursor_archaeologist_2:0 "Precursor Archaeologist"
  job_gpm_tec_precursor_archaeologist_2_plural:0 "Precursor Archaeologists"
  job_gpm_tec_precursor_archaeologist_2_desc:0 "Archaeologists specialised in the study of ancient civilizations."
- job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £trigger_tec_research£ §YResearch§! and £minor_artifacts£ §YMinor Artifacts§!"
+ job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn §Y$tec_loc_consumer_goods$§! into £trigger_tec_research£ §YResearch§! and $tec_loc_minor_artifacts$"
 
  job_gpm_tec_precursor_archaeologist_2_drone:0 "Precursor Archaeologist Drone"
  job_gpm_tec_precursor_archaeologist_2_drone_plural:0 "Precursor Archaeologist Drones"
  job_gpm_tec_precursor_archaeologist_2_drone_desc:0 "$job_gpm_tec_precursor_archaeologist_2_desc$"
- job_gpm_tec_precursor_archaeologist_2_drone_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2_drone£ $job_gpm_tec_precursor_archaeologist_2_drone_plural$ turn £energy£ §Y$energy$§! into £trigger_tec_research£ §YResearch Points§! and £minor_artifacts£ §YMinor Artifacts§!"
+ job_gpm_tec_precursor_archaeologist_2_drone_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2_drone£ $job_gpm_tec_precursor_archaeologist_2_drone_plural$ turn §Y$tec_loc_energy$§! into £trigger_tec_research£ §YResearch Points§! and $tec_loc_minor_artifacts$"
  mod_job_gpm_tec_precursor_archaeologist_2_add:0 "$job_gpm_tec_precursor_archaeologist_2$ Jobs"
  mod_job_gpm_tec_precursor_archaeologist_2_drone_add:0 "$job_gpm_tec_precursor_archaeologist_2_drone$ Jobs"
 # /
@@ -56,7 +56,7 @@
  job_giga_interstellar_researcher:0 "Interstellar Researcher"
  job_giga_interstellar_researcher_plural:0 "Interstellar Researchers"
  job_giga_interstellar_researcher_desc:0 "Interstellar Researchers study the vast void between star, where experiments can be conducted with little to no external interference."
- job_giga_interstellar_researcher_effect_desc:0 "£job_giga_interstellar_researcher£ $job_giga_interstellar_researcher_plural$ study the interstellar medium, generating £physics£ §Y$physics_research$§! "
+ job_giga_interstellar_researcher_effect_desc:0 "£job_giga_interstellar_researcher£ $job_giga_interstellar_researcher_plural$ study the interstellar medium, generating $tec_loc_physics$ "
  mod_job_giga_interstellar_researcher_add:0 "$job_giga_interstellar_researcher$ Jobs"
  mod_job_giga_interstellar_researcher_per_pop:0 "§G+1§! $job_giga_interstellar_researcher$ Job per $VALUE$ Pops"
  mod_job_giga_interstellar_researcher_per_pop_short:0 "(£mod_job_giga_interstellar_researcher_add£§G+1§! per £pop£$VALUE$)"
@@ -64,7 +64,7 @@
  job_giga_interstellar_researcher_drone:0 "Interstellar Researcher Drone"
  job_giga_interstellar_researcher_drone_plural:0 "Interstellar Researcher Drones"
  job_giga_interstellar_researcher_drone_desc:0 "Interstellar Researcher Drones study the vast void between star, where experiments can be conducted with little to no external interference."
- job_giga_interstellar_researcher_drone_effect_desc:0 "£job_giga_interstellar_researcher_drone£ $job_giga_interstellar_researcher_drone_plural$ study the interstellar medium, generating £physics£ §Y$physics_research$§! "
+ job_giga_interstellar_researcher_drone_effect_desc:0 "£job_giga_interstellar_researcher_drone£ $job_giga_interstellar_researcher_drone_plural$ study the interstellar medium, generating $tec_loc_physics$ "
  mod_job_giga_interstellar_researcher_drone_add:0 "$job_giga_interstellar_researcher_drone$ Jobs"
  mod_job_giga_interstellar_researcher_drone_per_pop:0 "§G+1§! $job_giga_interstellar_researcher_drone$ Job per $VALUE$ Pops"
  mod_job_giga_interstellar_researcher_drone_per_pop_short:0 "(£mod_job_giga_interstellar_researcher_drone_add£§G+1§! per £pop£$VALUE$)"
