--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -98,7 +98,7 @@
 	job_tec_processcap_drone:0 "Decoder" #Data-Cleanser - depurator
 	job_tec_processcap_drone_plural:0 "Decoders"
 	job_tec_processcap_drone_desc:0 "The sole purpose of these drones is capt, redirect and amplify the machine consciousness signal, separating properly orders, commands and calculations, amplifying the overall processing capacity applied to each unit and asset at a local or global scale."
-	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume £energy£ §YEnergy§! to generate £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!."
+	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume $tec_loc_energy$ to generate £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!."
 	mod_job_tec_processcap_drone_add:0 "$job_tec_processcap_drone$ Jobs"
 	mod_job_tec_processcap_drone_per_pop:0 "§G+1§! £mod_job_tec_processcap_drone_add£ $job_tec_processcap_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_processcap_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_processcap_drone_add£ per $VALUE$ £pop£"
@@ -211,8 +211,8 @@
 	job_tec_mechanitor_machine:0 "Mechanitor"
 	job_tec_mechanitor_machine_plural:0 "Mechanitors"
 	job_tec_mechanitor_machine_desc:0 "Specialized drones dedicated to the task of ensuring automated tasks are done swiftly and efficiently for the good of the Machine Intelligence."
-	job_tec_mechanitor_machine_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn £energy£ §Y$ENERGY$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_robot_assembly_mult$§!, §Y$tec_loc_robot_pop_output$§! and §Y$tec_loc_automation_output$§!."
-	job_tec_mechanitor_machine_effect_desc_cyborg:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn £energy£ §Y$ENERGY$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_cybernetic_assembly_mult$§!, §Y$tec_loc_cyborg_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	job_tec_mechanitor_machine_effect_desc:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_robot_assembly_mult$§!, §Y$tec_loc_robot_pop_output$§! and §Y$tec_loc_automation_output$§!."
+	job_tec_mechanitor_machine_effect_desc_cyborg:0 "£job_tec_mechanitor£ $job_tec_mechanitor_machine_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_cybernetic_assembly_mult$§!, §Y$tec_loc_cyborg_pop_output$§! and §Y$tec_loc_automation_output$§!."
 	mod_job_tec_mechanitor_machine_add:0 "$job_tec_mechanitor_machine$ Jobs"
 	mod_job_tec_mechanitor_machine_per_pop:0 "§G+1§! $job_tec_mechanitor_machine$ Job per $VALUE$ Pops"
 	mod_job_tec_mechanitor_machine_per_pop_short:0 "\n§G+1§! £job_tec_mechanitor£ per $VALUE$ £pop£"
@@ -309,7 +309,7 @@
 	job_tec_cyborg_ripperdoc:0 "Cyberdoc"
 	job_tec_cyborg_ripperdoc_plural:0 "Cyberdocs"
 	job_tec_cyborg_ripperdoc_desc:0 "Cybernetic implants require constant maintenance and care, and such is the task of cyberdocs, also known as ripperdocs; experts in both medical and technical elements, they apply, maintain and care metal and flesh alike, repairing implants, robots or illness."
-	job_tec_cyborg_ripperdoc_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
+	job_tec_cyborg_ripperdoc_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_amenities$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
 	mod_job_tec_cyborg_ripperdoc_add:0 "$job_tec_cyborg_ripperdoc$ Jobs"
 	mod_job_tec_cyborg_ripperdoc_per_pop:0 "§G+1§! $job_tec_cyborg_ripperdoc$ Job per $VALUE$ Pops"
 	mod_job_tec_cyborg_ripperdoc_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_ripperdoc_add£ per $VALUE$ £pop£"
@@ -330,7 +330,7 @@
 	job_tec_cyborg_ripperdoc_drone:0 "Upgrade Drone"
 	job_tec_cyborg_ripperdoc_drone_plural:0 "Upgrade Drones"
 	job_tec_cyborg_ripperdoc_drone_desc:0 "Cybernetic implants require constant maintenance and care, and such is the task of Upgrade Drones; dexterous in both medical and technical elements, they apply, maintain and care metal and flesh alike, repairing implants, robots or illness."
-	job_tec_cyborg_ripperdoc_drone_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_drone_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
+	job_tec_cyborg_ripperdoc_drone_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_drone_plural$ turn §Y$tec_loc_consumer_goods$§! into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
 	mod_job_tec_cyborg_ripperdoc_drone_add:0 "$job_tec_cyborg_ripperdoc_drone$ Jobs"
 	mod_job_tec_cyborg_ripperdoc_drone_per_pop:0 "§G+1§! $job_tec_cyborg_ripperdoc_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_cyborg_ripperdoc_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_ripperdoc_add£ per $VALUE$ £pop£"
