--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -6,7 +6,7 @@
  # --------------- Organic
 	trait_tec_lithotrophic:0 "Lithotrophic"
 	trait_tec_lithotrophic_desc:0 "§LThis species evolved from organisms able to consume inorganic substrate and materials in order to suit metabolic needs. While now they can adapt their diet to any kind of substance, this led to incredible survival and endurance capabilities.§!"
-	TRAIT_TEC_LITOTROPHIC_EFFECT:0 "£pop£ Species £food£ Food Upkeep: §G-0.5§!\n£pop£ Species £minerals£ Minerals Upkeep: §R+0.5§!"
+	TRAIT_TEC_LITOTROPHIC_EFFECT:0 "£pop£ Species £food£ Food Upkeep: §G-0.5§!\n£pop£ Species $tec_loc_minerals$ Upkeep: §R+0.5§!"
 
 	trait_tec_unity_eater:0 "Synchronic Psyche"
 	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
@@ -277,7 +277,7 @@
 	job_tec_academician:0 "Academician"
 	job_tec_academician_plural:0 "Academicians"
 	job_tec_academician_desc:0 "to do"
-	job_tec_academician_effect_desc:0 "£job_tec_academician£ $job_tec_academician_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_academician_effect_desc:0 "£job_tec_academician£ $job_tec_academician_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_academician_add:0 "$job_tec_academician$ Jobs"
 	mod_job_tec_academician_per_pop:0 "§G+1§! $job_tec_academician$ Job per $VALUE$ Pops"
 	mod_job_tec_academician_per_pop_short:0 "\n§G+1§! £mod_job_tec_academician_add£ per $VALUE$ £pop£"
@@ -288,8 +288,8 @@
 	job_tec_state_worker:0 "Public Servant"
 	job_tec_state_worker_plural:0 "Public Servants"
 	job_tec_state_worker_desc:0 "Specifically hired by the government agencies as counter-unemployment measure, these employees are dedicated to a myriad of tasks for the better development of their society."
-	job_tec_state_worker_effect_desc:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce £unity£ §Y$unity$§! and £amenities£ §YAmenities§! while having extra £consumer_goods£ §YConsumer Goods§! upkeep, serving the empire another job is filled."
-	job_tec_state_worker_effect_desc_megacorp:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce £unity£ §Y$unity$§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§! while having extra £consumer_goods£ §YConsumer Goods§! upkeep, serving the empire until another job is filled."
+	job_tec_state_worker_effect_desc:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce §Y$tec_loc_unity$§! and £amenities£ §YAmenities§! while having extra $tec_loc_consumer_goods$ upkeep, serving the empire another job is filled."
+	job_tec_state_worker_effect_desc_megacorp:0 "£job_tec_state_worker£ $job_tec_state_worker_plural$ produce §Y$tec_loc_unity$§! and §Y$tec_loc_trade_value$§! while having extra $tec_loc_consumer_goods$ upkeep, serving the empire until another job is filled."
 	mod_job_tec_state_worker_add:0 "$job_tec_state_worker$ Jobs"
 	mod_job_tec_state_worker_per_pop:0 "§G+1§! $job_tec_state_worker$ Job per $VALUE$ Pops"
 	mod_job_tec_state_worker_per_pop_short:0 "\n§G+1§! £mod_job_tec_state_worker_add£ per $VALUE$ £pop£"
@@ -297,7 +297,7 @@
 	job_tec_state_specialist:0 "Functionary"
 	job_tec_state_specialist_plural:0 "Functionaries"
 	job_tec_state_specialist_desc:0 "to do"
-	job_tec_state_specialist_effect_desc:0 "£job_tec_state_specialist£ $job_tec_state_specialist_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_state_specialist_effect_desc:0 "£job_tec_state_specialist£ $job_tec_state_specialist_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_state_specialist_add:0 "$job_tec_state_specialist$ Jobs"
 	mod_job_tec_state_specialist_per_pop:0 "§G+1§! $job_tec_state_specialist$ Job per $VALUE$ Pops"
 	mod_job_tec_state_specialist_per_pop_short:0 "\n§G+1§! £mod_job_tec_state_specialist_add£ per $VALUE$ £pop£"
@@ -308,7 +308,7 @@
 	job_tec_hivelinked_menial:0 "Workforce Drone"
 	job_tec_hivelinked_menial_plural:0 "Workforce Drones"
 	job_tec_hivelinked_menial_desc:0 "Connected to a emulated gestalt consciouness signal and their brethren, these drones serve the empire doing several menial tasks."
-	job_tec_hivelinked_menial_effect_desc:0 "£job_tec_hivelinked_menial£ $job_tec_hivelinked_menial_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_menial_effect_desc:0 "£job_tec_hivelinked_menial£ $job_tec_hivelinked_menial_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_menial_add:0 "$job_tec_hivelinked_menial$ Jobs"
 	mod_job_tec_hivelinked_menial_per_pop:0 "§G+1§! $job_tec_hivelinked_menial$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_menial_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_menial_add£ per $VALUE$ £pop£"
@@ -316,7 +316,7 @@
 	job_tec_hivelinked_maintenance:0 "Caretaking Drone"
 	job_tec_hivelinked_maintenance_plural:0 "Caretaking Drones"
 	job_tec_hivelinked_maintenance_desc:0 "Connected to a emulated gestalt consciousness signal and their brethren, these drones serve the population and infrastructure by relentlessly keeping it functional."
-	job_tec_hivelinked_maintenance_effect_desc:0 "£job_tec_hivelinked_maintenance£ $job_tec_hivelinked_maintenance_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_maintenance_effect_desc:0 "£job_tec_hivelinked_maintenance£ $job_tec_hivelinked_maintenance_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_maintenance_add:0 "$job_tec_hivelinked_maintenance$ Jobs"
 	mod_job_tec_hivelinked_maintenance_per_pop:0 "§G+1§! $job_tec_hivelinked_maintenance$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_maintenance_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_maintenance_add£ per $VALUE$ £pop£"
@@ -324,7 +324,7 @@
 	job_tec_hivelinked_research:0 "Intellectual Drone"
 	job_tec_hivelinked_research_plural:0 "Intellectual Drones"
 	job_tec_hivelinked_research_desc:0 "Highly intelligent and close-to-autonomous drones dedicated to research and development collaboration."
-	job_tec_hivelinked_research_effect_desc:0 "£job_tec_hivelinked_research£ $job_tec_hivelinked_research_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_research_effect_desc:0 "£job_tec_hivelinked_research£ $job_tec_hivelinked_research_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_research_add:0 "$job_tec_hivelinked_research$ Jobs"
 	mod_job_tec_hivelinked_research_per_pop:0 "§G+1§! $job_tec_hivelinked_research$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_research_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_research_add£ per $VALUE$ £pop£"
@@ -332,7 +332,7 @@
 	job_tec_hivelinked_alloys:0 "Fabrication Drone"
 	job_tec_hivelinked_alloys_plural:0 "Fabrication Drones"
 	job_tec_hivelinked_alloys_desc:0 "These skilled drones retain alloy and polymer creation techniques from its original consciousness, and now they are truly consecrated to its production."
-	job_tec_hivelinked_alloys_effect_desc:0 "£job_tec_hivelinked_alloys£ $job_tec_hivelinked_alloys_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_alloys_effect_desc:0 "£job_tec_hivelinked_alloys£ $job_tec_hivelinked_alloys_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_alloys_add:0 "$job_tec_hivelinked_alloys$ Jobs"
 	mod_job_tec_hivelinked_alloys_per_pop:0 "§G+1§! $job_tec_hivelinked_alloys$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_alloys_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_alloys_add£ per $VALUE$ £pop£"
@@ -340,7 +340,7 @@
 	job_tec_hivelinked_trade:0 "Fabrication Drone"
 	job_tec_hivelinked_trade_plural:0 "Fabrication Drones"
 	job_tec_hivelinked_trade_desc:0 "These skilled drones retain alloy and polymer creation techniques from its original consciousness, and now they are truly consecrated to its production."
-	job_tec_hivelinked_trade_effect_desc:0 "£job_tec_hivelinked_trade£ $job_tec_hivelinked_trade_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
+	job_tec_hivelinked_trade_effect_desc:0 "£job_tec_hivelinked_trade£ $job_tec_hivelinked_trade_plural$ produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
 	mod_job_tec_hivelinked_trade_add:0 "$job_tec_hivelinked_trade$ Jobs"
 	mod_job_tec_hivelinked_trade_per_pop:0 "§G+1§! $job_tec_hivelinked_trade$ Job per $VALUE$ Pops"
 	mod_job_tec_hivelinked_trade_per_pop_short:0 "\n§G+1§! £mod_job_tec_hivelinked_trade_add£ per $VALUE$ £pop£"
@@ -352,7 +352,7 @@
 	job_tec_ascendant_drone:0 "Ascendant"
 	job_tec_ascendant_drone_plural:0 "Ascendants"
 	job_tec_ascendant_drone_desc:0 "Few are the drones consecrated to the task of fully understanding the meaning behind the questions faced without logical answer, but their duty at finding self-determination in either an external or internal answer drives them forward."
-	job_tec_ascendant_drone_effect_desc:0 "£job_tec_ascendant_drone£ $job_tec_ascendant_drone_plural$ consume £energy£ §YEnergy§! to generate £unity£ §YUnity§! and £engineering£ §YEngineering§!."
+	job_tec_ascendant_drone_effect_desc:0 "£job_tec_ascendant_drone£ $job_tec_ascendant_drone_plural$ consume $tec_loc_energy$ to generate £unity£ §YUnity§! and £engineering£ §YEngineering§!."
 	mod_job_tec_ascendant_drone_add:0 "$job_tec_ascendant_drone$ Jobs"
 	mod_job_tec_ascendant_drone_per_pop:0 "§G+1§! £mod_job_tec_ascendant_drone_add£ $job_tec_ascendant_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_ascendant_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_ascendant_drone_add£ per $VALUE$ £pop£"
@@ -361,7 +361,7 @@
 	job_tec_biotrophy_administrator:0 "Administrator"
 	job_tec_biotrophy_administrator_plural:0 "Administrators"
 	job_tec_biotrophy_administrator_desc:0 "Selected biotrophies charged with the task of representing a local political corp, creating the sense of natural hierarchy and social order the organics used to be adapted for, serving as a familiar authority figure controlled by our standards."
-	job_tec_biotrophy_administrator_effect_desc:0 "£job_tec_biotrophy_administrator£ $job_tec_biotrophy_administrator_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £job_roboticist£ §YComplex Drone Output§!."
+	job_tec_biotrophy_administrator_effect_desc:0 "£job_tec_biotrophy_administrator£ $job_tec_biotrophy_administrator_plural$ turn extra $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £job_roboticist£ §YComplex Drone Output§!."
 	mod_job_tec_biotrophy_administrator_add:0 "$job_tec_biotrophy_administrator$ Jobs"
 	mod_job_tec_biotrophy_administrator_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_administrator_add£ $job_tec_biotrophy_administrator$ Job per $VALUE$ Pops"
 	mod_job_tec_biotrophy_administrator_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_administrator_add£ per $VALUE$ £pop£"
@@ -369,7 +369,7 @@
 	job_tec_biotrophy_commissar:0 "Commissar"
 	job_tec_biotrophy_commissar_plural:0 "Commissars"
 	job_tec_biotrophy_commissar_desc:0 "Selected biotrophies assigned to the proper control and supervision of other biotrophies, the correct application of pampering culture and coverage of any possible dissidence or free-will crime at a local state, serving as an authoritarian figure."
-	job_tec_biotrophy_commissar_effect_desc:0 "£job_tec_biotrophy_commissar£ $job_tec_biotrophy_commissar_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £crime_no_happiness£ §YDeviancy Reduction§! and £stability£ §YStability§!."
+	job_tec_biotrophy_commissar_effect_desc:0 "£job_tec_biotrophy_commissar£ $job_tec_biotrophy_commissar_plural$ turn extra $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £crime_no_happiness£ §YDeviancy Reduction§! and £stability£ §YStability§!."
 	mod_job_tec_biotrophy_commissar_add:0 "$job_tec_biotrophy_commissar$ Jobs"
 	mod_job_tec_biotrophy_commissar_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_commissar_add£ $job_tec_biotrophy_commissar$ Job per $VALUE$ Pops"
 	mod_job_tec_biotrophy_commissar_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_commissar_add£ per $VALUE$ £pop£"
@@ -377,7 +377,7 @@
 	job_tec_biotrophy_caretaker:0 "Caretaker"
 	job_tec_biotrophy_caretaker_plural:0 "Caretakers"
 	job_tec_biotrophy_caretaker_desc:0 "Selected biotrophies assigned to take part on our pampering processes, by selectively caring and ensuring the other biotrophy population is healthy, happy and compliant; after all, the feeling of a organic face taking care of them motivate other organics."
-	job_tec_biotrophy_caretaker_effect_desc:0 "£job_tec_biotrophy_caretaker£ $job_tec_biotrophy_caretaker_plural$ turn extra £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £mod_pop_growth_speed£ §YOrganic Pop Growth§!."
+	job_tec_biotrophy_caretaker_effect_desc:0 "£job_tec_biotrophy_caretaker£ $job_tec_biotrophy_caretaker_plural$ turn extra $tec_loc_consumer_goods$ into £unity£ §YUnity§!, £happiness£ Biotrophy §YHappiness§! and £mod_pop_growth_speed£ §YOrganic Pop Growth§!."
 	mod_job_tec_biotrophy_caretaker_add:0 "$job_tec_biotrophy_caretaker$ Jobs"
 	mod_job_tec_biotrophy_caretaker_per_pop:0 "§G+1§! £mod_job_tec_biotrophy_caretaker_add£ $job_tec_biotrophy_caretaker$ Job per $VALUE$ Pops"
 	mod_job_tec_biotrophy_caretaker_per_pop_short:0 "\n§G+1§! £mod_job_tec_biotrophy_caretaker_add£ per $VALUE$ £pop£"
@@ -1158,9 +1158,9 @@
 	job_tec_bioevolution_drone:0 "Evolutionary Drone"
 	job_tec_bioevolution_drone_plural:0 "Evolutionary Drones"
 	job_tec_bioevolution_drone_desc:0 "Strand of genetic data after strand of genetic data, these drones are deeply focused on finding the perfect and most stable and specialized variants of drones suitable for the needs of the collective, and preserve the gestalt memory and unity deeply engraved in each one of them."
-	job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ assemble new drone £pop£ §YPops§! with £food£ §YFood§! or £minerals£ §YMinerals§!."
-	job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn £energy£ §Y$energy$§! into £unity£ §Y$unity$§!$tec_tec_bioevolution_drone_cleanup$ and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
-	job_tec_bioevolution_drone_effect_desc_civic:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn £energy£ §Y$energy$§! into £unity£ §Y$unity$§!, bonuses based on the gestalt §YMotivations§! and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
+	job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ assemble new drone £pop£ §YPops§! with $tec_loc_food$ or $tec_loc_minerals$."
+	job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_tec_bioevolution_drone_cleanup$ and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
+	job_tec_bioevolution_drone_effect_desc_civic:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
 	mod_job_tec_bioevolution_drone_add:0 "$job_tec_bioevolution_drone$ Jobs"
 	mod_job_tec_bioevolution_drone_per_pop:0 "§G+1§! £mod_job_tec_bioevolution_drone_add£ $job_tec_bioevolution_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_bioevolution_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioevolution_drone_add£ per $VALUE$ £pop£"
@@ -1176,7 +1176,7 @@
 	job_tec_biospawning_drone:0 "Podtender Drone"
 	job_tec_biospawning_drone_plural:0 "Podtender Drones"
 	job_tec_biospawning_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-	job_tec_biospawning_drone_effect_desc:0 "£job_tec_biospawning_drone£ $job_tec_biospawning_drone_plural$ assemble new drone £pop£ §YPops§! with £food£ §YFood§! or £minerals£ §YMinerals§!."
+	job_tec_biospawning_drone_effect_desc:0 "£job_tec_biospawning_drone£ $job_tec_biospawning_drone_plural$ assemble new drone £pop£ §YPops§! with $tec_loc_food$ or $tec_loc_minerals$."
 	mod_job_tec_biospawning_drone_add:0 "$job_tec_biospawning_drone$ Jobs"
 	mod_job_tec_biospawning_drone_per_pop:0 "§G+1§! £mod_job_tec_biospawning_drone_add£ $job_tec_biospawning_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_biospawning_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biospawning_drone_add£ per $VALUE$ £pop£"
@@ -1186,7 +1186,7 @@
 	job_tec_biomass_drone:0 "Podtender Drone"
 	job_tec_biomass_drone_plural:0 "Podtender Drones"
 	job_tec_biomass_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-	job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with £food£ §YFood§! or £minerals£ §YMinerals§!."
+	job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with $tec_loc_food$ or $tec_loc_minerals$."
 	mod_job_tec_biomass_drone_add:0 "$job_tec_biomass_drone$ Jobs"
 	mod_job_tec_biomass_drone_per_pop:0 "§G+1§! £mod_job_tec_biomass_drone_add£ $job_tec_biomass_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_biomass_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_drone_add£ per $VALUE$ £pop£"
