--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -162,7 +162,7 @@
  tr_cybernetics_metabolic_reprocessing_tooltip:0 "Empire Size from Cyborg Pops: §G-10%§!"
 
  tr_cybernetics_integrated_anatomy:0 "Integrated Anatomy"
- tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species £energy£ Energy Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional £energy£ Energy Upkeep."
+ tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species $tec_loc_energy$ Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional $tec_loc_energy$ Upkeep."
 
  tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
  tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and £engineering£ §YEngineering§! Research based on the building tier, and a moderate amount of £amenities£ §YAmenities§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
