--- a/localisation/english/zz_bioservant_l_english.yml
+++ b/localisation/english/zz_bioservant_l_english.yml
@@ -113,7 +113,7 @@
  job_tec_bioengineer:0 "Bioengineer"
  job_tec_bioengineer_plural:0 "Bioengineers"
  job_tec_bioengineer_desc:1 "These specialists tend to the vats, pods, and pools which design, tailor and create bio-constructed lifeforms for the empire use."
- job_tec_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_bioengineer_plural$ turns £food£ §Y$food$§! into §YBio-Construct $tec_loc_biological_assembly$§!"
+ job_tec_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_bioengineer_plural$ turns §Y$tec_loc_food$§! into §YBio-Construct $tec_loc_biological_assembly$§!"
 
  mod_job_tec_bioengineer_add:0 "$job_tec_bioengineer$ Jobs"
  mod_job_tec_bioengineer_add_per_pop:0 "§G+1§! $job_tec_bioengineer$ Job Per $VALUE$ Pops"
@@ -124,7 +124,7 @@
  job_tec_bioengineer_drone:0 "Biotailor Drone"
  job_tec_bioengineer_drone_plural:0 "Biotailor Drones"
  job_tec_bioengineer_drone_desc:1 "These drones tend the vats, pods, and pools which design, tailor and create new Hive Mind lifeforms."
- job_tec_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_bioengineer_drone_plural$ turns £food£ §Y$food$§! into §YBio-Construct $tec_loc_biological_assembly$§!"
+ job_tec_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_bioengineer_drone_plural$ turns §Y$tec_loc_food$§! into §YBio-Construct $tec_loc_biological_assembly$§!"
 
 
  mod_job_tec_bioengineer_drone_add:0 "$job_tec_bioengineer_drone$ Jobs"
