--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -92,7 +92,7 @@ concept_tec_environment_engineers_icon: "£stability£ $decision_tec_environment
 concept_tec_environment_engineers_desc: "This decision can be enacted on §YHabitats§! or §YArcology Megastructures§!\n\n$decision_tec_environment_engineers_effects$"
 
 concept_tec_environment_engineers_breakdown: "$decision_tec_environment_engineers$ Effect"
-concept_tec_environment_engineers_breakdown_desc: "Habitats:\n- Get the §Y$pm_tec_engineered_habitat$§! modifiers.\n- Get 2 random special habitat deposits\n- If the system in which the habitat is placed has precursor activity, the habitat gets the §Y$d_tec_engineered_precursor$§! deposit\n\nElysiums:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get two §Y$d_tec_eco_terraformed_ring$§! deposits\n- Get 2 random arcology deposits\n\nRingworld or Modded Space Arcologies:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get the §Y$d_tec_eco_terraformed_ring$§! deposit\n- Get 2 random arcology deposits"
+concept_tec_environment_engineers_breakdown_desc: "Habitats:\n- Get the §Y$pm_tec_engineered_habitat$§! modifiers.\n- Get 2 random special habitat deposits\n- If the system in which the habitat is placed has precursor activity, the habitat gets the §Y$d_tectec_aqua_drone_engineered_precursor$§! deposit\n\nElysiums:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get two §Y$d_tec_eco_terraformed_ring$§! deposits\n- Get 2 random arcology deposits\n\nRingworld or Modded Space Arcologies:\n- Get the §Y$pm_tec_engineered_weather$§! modifier\n- Get the §Y$d_tec_eco_terraformed_ring$§! deposit\n- Get 2 random arcology deposits"
 
 concept_tec_environment_fix: "$decision_tec_environment_fix$"
 concept_tec_environment_fix_icon: "£stability£ $decision_tec_environment_fix$"
@@ -109,24 +109,224 @@ concept_tec_environment_preserve_desc: "$decision_tec_environment_preserve_effec
 # Jobs
 concept_tec_job_angler: "$job_angler$"
 concept_tec_job_angler_icon: "£job_angler£ $job_angler$"
-concept_tec_job_anglers: "$job_angler_plural$"
-concept_tec_job_anglers_icon: "£job_angler£ $job_angler_plural$"
-concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\nTrade Value: §G+2§!\nProduces: §Y£food£ 8§!" 
+concept_tec_job_angler_plural: "$job_angler_plural$"
+concept_tec_job_angler_plural_icon: "£job_angler£ $job_angler_plural$"
+concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£food£ 8§!" 
 
 concept_tec_tec_reef_miner: "$tec_reef_miner$"
 concept_tec_tec_reef_miner_icon: "£job_tec_reef_miner£ $tec_reef_miner$"
-concept_tec_tec_reef_miners: "$tec_reef_miner_plural$"
-concept_tec_tec_reef_miners_icon: "£job_tec_reef_miner£ $tec_reef_miner_plural$"
-concept_tec_tec_reef_miner_desc: "Stratum: §Y$pop_cat_worker$§!\nTrade Value: §G+2§!\nProduces: §Y£minerals£ 6§!" 
+concept_tec_tec_reef_miner_plural: "$tec_reef_miner_plural$"
+concept_tec_tec_reef_miner_plural_icon: "£job_tec_reef_miner£ $tec_reef_miner_plural$"
+concept_tec_tec_reef_miner_desc: "Stratum: §Y$pop_cat_worker$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£minerals£ 6§!" 
 
 concept_tec_job_pearl_diver: "$job_pearl_diver$"
 concept_tec_job_pearl_diver_icon: "£job_pearl_diver£ $job_pearl_diver$"
-concept_tec_job_pearl_divers: "$job_pearl_diver_plural$"
-concept_tec_job_pearl_divers_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
-concept_tec_job_pearl_diver_desc: "Stratum: §Y$pop_cat_specialist$§!\nTrade Value: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 4 £food£ 3§!"
+concept_tec_job_pearl_diver_plural: "$job_pearl_diver_plural$"
+concept_tec_job_pearl_diver_plural_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
+concept_tec_job_pearl_diver_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 4 £food£ 3§!"
 
 concept_tec_job_pearl_diver_lithoid: "$job_pearl_diver$"
 concept_tec_job_pearl_diver_lithoid_icon: "£job_pearl_diver£ $job_pearl_diver$"
-concept_tec_job_pearl_divers_lithoid: "$job_pearl_diver_plural$"
-concept_tec_job_pearl_divers_lithoid_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
-concept_tec_job_pearl_diver_lithoid_desc: "Stratum: §Y$pop_cat_specialist$§!\nTrade Value: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!" 
+concept_tec_job_pearl_diver_lithoid_plural: "$job_pearl_diver_plural$"
+concept_tec_job_pearl_diver_lithoid_plural_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
+concept_tec_job_pearl_diver_lithoid_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!" 
+
+concept_tec_job_tec_aqua_drone: "$job_tec_aqua_drone$"
+concept_tec_job_tec_aqua_drone_icon: "£job_tec_aqua_drone£ $job_tec_aqua_drone$"
+concept_tec_job_tec_aqua_drone_plural: "$job_tec_aqua_drone_plural$"
+concept_tec_job_tec_aqua_drone_plural_icon: "£job_tec_aqua_drone£ $job_tec_aqua_drone_plural$"
+concept_tec_job_tec_aqua_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£food£ 8§!" 
+
+concept_tec_job_tec_reef_drone: "$job_tec_reef_drone$"
+concept_tec_job_tec_reef_drone_icon: "£job_tec_reef_drone£ $job_tec_reef_drone$"
+concept_tec_job_tec_reef_drone_plural: "$job_tec_reef_drone_plural$"
+concept_tec_job_tec_reef_drone_plural_icon: "£job_tec_reef_drone£ $job_tec_reef_drone_plural$"
+concept_tec_job_tec_reef_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities$: §G+2§!\nProduces: §Y£minerals£ 6§!" 
+
+concept_tec_job_tec_depth_drone: "$job_tec_depth_drone$"
+concept_tec_job_tec_depth_drone_icon: "£job_tec_depth_drone£ $job_tec_depth_drone$"
+concept_tec_job_tec_depth_drone_plural: "$job_tec_depth_drone_plural$"
+concept_tec_job_tec_depth_drone_plural_icon: "£job_tec_depth_drone£ $job_tec_depth_drone_plural$"
+concept_tec_job_tec_depth_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£food£ 2§!" 
+
+
+concept_tec_job_tec_depth_drone_lithoid: "$job_tec_depth_drone$"
+concept_tec_job_tec_depth_drone_lithoid_icon: "£job_tec_depth_drone£ $job_tec_depth_drone$"
+concept_tec_job_tec_depth_drone_lithoid_plural: "$job_tec_depth_drone_plural$"
+concept_tec_job_tec_depth_drone_lithoid_plural_icon: "£job_tec_depth_drone£ $job_tec_depth_drone_plural$"
+concept_tec_job_tec_depth_drone_lithoid_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nDeviancy: §G-10§!\n$tec_loc_pop_growth$: §G+0.25%§!\nUpkeep: §Y£minerals£ 2§!" 
+
+
+concept_tec_job_tec_thermogenerator_drone: "$job_tec_thermogenerator_drone$"
+concept_tec_job_tec_thermogenerator_drone_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
+concept_tec_job_tec_thermogenerator_drone_plural: "$job_tec_thermogenerator_drone_plural$"
+concept_tec_job_tec_thermogenerator_drone_plural_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
+concept_tec_job_tec_thermogenerator_drone_desc: "Stratum: §Y$pop_cat_simple_drone$§!\n$tec_loc_amenities_gestalt$: §G+2§!\nProduces: §Y£energy£ 8§!" 
+
+concept_tec_job_tec_hydrorelay_drone: "$job_tec_hydrorelay_drone$"
+concept_tec_job_tec_hydrorelay_drone_icon: "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone$"
+concept_tec_job_tec_hydrorelay_drone_plural: "$job_tec_hydrorelay_drone_plural$"
+concept_tec_job_tec_hydrorelay_drone_plural_icon: "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone_plural$"
+concept_tec_job_tec_hydrorelay_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\n$tec_loc_amenities_gestalt$: §G+4§!\nProduces: §Y£physics_research£ 6§!" 
+
+
+# Foundry
+
+concept_tec_job_foundry: "$job_foundry$"
+concept_tec_job_foundry_icon: "£job_foundry£ $job_foundry$"
+concept_tec_job_foundry_plural: "$job_foundry_plural$"
+concept_tec_job_foundry_plural_icon: "£job_foundry£ $job_foundry_plural$"
+concept_tec_job_foundry_desc: "Stratum: §Y$pop_cat_specialist$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£minerals£ 6§!"
+
+concept_tec_job_alloy_drone: "$job_alloy_drone$"
+concept_tec_job_alloy_drone_icon: "£job_alloy_drone£ $job_alloy_drone$"
+concept_tec_job_alloy_drone_plural: "$job_alloy_drone_plural$"
+concept_tec_job_alloy_drone_plural_icon: "£job_alloy_drone£ $job_alloy_drone_plural$"
+concept_tec_job_alloy_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£minerals£ 6§!"
+
+
+concept_tec_job_fabricator: "$job_fabricator$"
+concept_tec_job_fabricator_icon: "£job_fabricator£ $job_fabricator$"
+concept_tec_job_fabricator_plural: "$job_fabricator_plural$"
+concept_tec_job_fabricator_plural_icon: "£job_fabricator£ $job_fabricator_plural$"
+concept_tec_job_fabricator_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 4§!\nUpkeep: §Y£minerals£ 8§!"
+
+concept_tec_job_catalytic_technician: "$job_catalytic_technician$"
+concept_tec_job_catalytic_technician_icon: "£job_catalytic_technician£ $job_catalytic_technician$"
+concept_tec_job_catalytic_technician_plural: "$job_catalytic_technician_plural$"
+concept_tec_job_catalytic_technician_plural_icon: "£job_catalytic_technician£ $job_catalytic_technician_plural$"
+concept_tec_job_catalytic_technician_desc: "Stratum: §Y$pop_cat_specialist$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£food£ 9§!"
+
+concept_tec_job_catalytic_drone: "$job_catalytic_drone$"
+concept_tec_job_catalytic_drone_icon: "£job_catalytic_drone£ $job_catalytic_drone$"
+concept_tec_job_catalytic_drone_plural: "$job_catalytic_drone_plural$"
+concept_tec_job_catalytic_drone_plural_icon: "£job_catalytic_drone£ $job_catalytic_drone_plural$"
+concept_tec_job_catalytic_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£food£ 9§!"
+
+
+concept_tec_job_catalytic_drone_machine: "$job_catalytic_drone$"
+concept_tec_job_catalytic_drone_machine_icon: "£job_catalytic_drone£ $job_catalytic_drone$"
+concept_tec_job_catalytic_drone_machine_plural: "$job_catalytic_drone_plural$"
+concept_tec_job_catalytic_drone_machine_plural_icon: "£job_catalytic_drone£ $job_catalytic_drone_plural$"
+concept_tec_job_catalytic_drone_machine_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 4§!\nUpkeep: §Y£food£ 12§!"
+
+concept_tec_job_foundry_quantum: "$job_foundry$"
+concept_tec_job_foundry_quantum_icon: "£job_foundry£ $job_foundry$"
+concept_tec_job_foundry_quantum_plural: "$job_foundry_plural$"
+concept_tec_job_foundry_quantum_plural_icon: "£job_foundry£ $job_foundry_plural$"
+concept_tec_job_foundry_quantum_desc: "Stratum: §Y$pop_cat_specialist$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£minerals£ 3 £energy£ 5§!"
+
+concept_tec_job_alloy_drone_quantum: "$job_alloy_drone$"
+concept_tec_job_alloy_drone_quantum_icon: "£job_alloy_drone£ $job_alloy_drone$"
+concept_tec_job_alloy_drone_quantum_plural: "$job_alloy_drone_plural$"
+concept_tec_job_alloy_drone_quantum_plural_icon: "£job_alloy_drone£ $job_alloy_drone_plural$"
+concept_tec_job_alloy_drone_quantum_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 3§!\nUpkeep: §Y£minerals£ 3 £energy£ 5§!"
+
+
+concept_tec_job_fabricator_quantum: "$job_fabricator$"
+concept_tec_job_fabricator_quantum_icon: "£job_fabricator£ $job_fabricator$"
+concept_tec_job_fabricator_quantum_plural: "$job_fabricator_plural$"
+concept_tec_job_fabricator_quantum_plural_icon: "£job_fabricator£ $job_fabricator_plural$"
+concept_tec_job_fabricator_quantum_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£alloys£ 4§!\nUpkeep: §Y£minerals£ 4 £energy£ 6.6§!"
+
+# Artisan
+
+concept_tec_job_artisan: "$job_artisan$"
+concept_tec_job_artisan_icon: "£job_artisan£ $job_artisan$"
+concept_tec_job_artisan_plural: "$job_artisan_plural$"
+concept_tec_job_artisan_plural_icon: "£job_artisan£ $job_artisan_plural$"
+concept_tec_job_artisan_desc: "Stratum: §Y$pop_cat_specialist$§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!"
+
+concept_tec_job_artificer: "$job_artificer$"
+concept_tec_job_artificer_icon: "£job_artificer£ $job_artificer$"
+concept_tec_job_artificer_plural: "$job_artificer_plural$"
+concept_tec_job_artificer_plural_icon: "£job_artificer£ $job_artificer_plural$"
+concept_tec_job_artificer_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£consumer_goods£ 7§!\nUpkeep: §Y£minerals£ 6§!"
+
+
+concept_tec_job_artisan_drone: "$job_artisan_drone$"
+concept_tec_job_artisan_drone_icon: "£job_artisan_drone£ $job_artisan_drone$"
+concept_tec_job_artisan_drone_plural: "$job_artisan_drone_plural$"
+concept_tec_job_artisan_drone_plural_icon: "£job_artisan_drone£ $job_artisan_drone_plural$"
+concept_tec_job_artisan_drone_desc: "Stratum: §Y$pop_cat_complex_drone$§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 6§!"
+
+## Districts
+
+concept_tec_district_generator_regular: "$district_generator$"
+concept_tec_district_generator_regular_icon: "£district_generator£ $district_generator$"
+concept_tec_district_generator_regular_plural: "$district_generator_plural$"
+concept_tec_district_generator_regular_plural_icon: "£district_generator£ $district_generator_plural$"
+concept_tec_district_generator_regular_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_technician_add£ $mod_job_technician_add$: §G+2§!\n\n$job_technician_effect_desc$"
+
+concept_tec_district_generator_hive: "$district_generator$"
+concept_tec_district_generator_hive_icon: "£district_generator£ $district_generator$"
+concept_tec_district_generator_hive_plural: "$district_generator_plural$"
+concept_tec_district_generator_hive_plural_icon: "£district_generator£ $district_generator_plural$"
+concept_tec_district_generator_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_technician_drone_add£ $mod_job_technician_drone_add$: §G+3§!\n\n$job_technician_drone_effect_desc$"
+
+
+concept_tec_district_generator_machine: "$district_generator$"
+concept_tec_district_generator_machine_icon: "£district_generator£ $district_generator$"
+concept_tec_district_generator_machine_plural: "$district_generator_plural$"
+concept_tec_district_generator_machine_plural_icon: "£district_generator£ $district_generator_plural$"
+concept_tec_district_generator_machine_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_technician_drone_add£ $mod_job_technician_drone_add$: §G+2§!\n\n$job_technician_drone_effect_desc$"
+
+
+concept_tec_district_mining_regular: "$district_mining$"
+concept_tec_district_mining_regular_icon: "£district_mining£ $district_mining$"
+concept_tec_district_mining_regular_plural: "$district_mining_plural$"
+concept_tec_district_mining_regular_plural_icon: "£district_mining£ $district_mining_plural$"
+concept_tec_district_mining_regular_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_miner_add£ $mod_job_miner_add$: §G+2§!\n\n$job_miner_effect_desc$"
+
+concept_tec_district_mining_hive: "$district_mining$"
+concept_tec_district_mining_hive_icon: "£district_mining£ $district_mining$"
+concept_tec_district_mining_hive_plural: "$district_mining_plural$"
+concept_tec_district_mining_hive_plural_icon: "£district_mining£ $district_mining_plural$"
+concept_tec_district_mining_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_mining_drone_add£ $mod_job_mining_drone_add$: §G+3§!\n\n$job_mining_drone_effect_desc$"
+
+
+concept_tec_district_mining_machine: "$district_mining$"
+concept_tec_district_mining_machine_icon: "£district_mining£ $district_mining$"
+concept_tec_district_mining_machine_plural: "$district_mining_plural$"
+concept_tec_district_mining_machine_plural_icon: "£district_mining£ $district_mining_plural$"
+concept_tec_district_mining_machine_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_mining_drone_add£ $mod_job_mining_drone_add$: §G+2§!\n\n$job_mining_drone_effect_desc$"
+
+
+concept_tec_district_farming_regular: "$district_farming$"
+concept_tec_district_farming_regular_icon: "£district_farming£ $district_farming$"
+concept_tec_district_farming_regular_plural: "$district_farming_plural$"
+concept_tec_district_farming_regular_plural_icon: "£district_farming£ $district_farming_plural$"
+concept_tec_district_farming_regular_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_farmer_add£ $mod_job_farmer_add$: §G+2§!\n\n$job_farmer_effect_desc$"
+
+concept_tec_district_farming_hive: "$district_farming$"
+concept_tec_district_farming_hive_icon: "£district_farming£ $district_farming$"
+concept_tec_district_farming_hive_plural: "$district_farming_plural$"
+concept_tec_district_farming_hive_plural_icon: "£district_farming£ $district_farming_plural$"
+concept_tec_district_farming_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_agri_drone_add£ $mod_job_agri_drone_add$: §G+3§!\n\n$job_agri_drone_effect_desc$"
+
+
+concept_tec_district_farming_machine: "$district_farming$"
+concept_tec_district_farming_machine_icon: "£district_farming£ $district_farming$"
+concept_tec_district_farming_machine_plural: "$district_farming_plural$"
+concept_tec_district_farming_machine_plural_icon: "£district_farming£ $district_farming_plural$"
+concept_tec_district_farming_machine_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_agri_drone_add£ $mod_job_agri_drone_add$: §G+2§!\n\n$job_agri_drone_effect_desc$"
+
+
+
+concept_tec_district_tec_aqua_generator_machine: "$district_tec_aqua_generator$"
+concept_tec_district_tec_aqua_generator_machine_icon: "£district_tec_aqua_generator£ $district_tec_aqua_generator$"
+concept_tec_district_tec_aqua_generator_machine_plural: "$district_tec_aqua_generator_plural$"
+concept_tec_district_tec_aqua_generator_machine_plural_icon: "£district_tec_aqua_generator£ $district_tec_aqua_generator_plural$"
+concept_tec_district_tec_aqua_generator_machine_desc: "$tec_loc_housing$: §G+3§!\n£mod_job_tec_thermogenerator_drone_add£ $mod_job_tec_thermogenerator_drone_add$: §G+1§!\n£mod_job_tec_hydrorelay_drone_add£ $mod_job_tec_hydrorelay_drone_add$: §G+1§!\n\n$job_tec_thermogenerator_drone_effect_desc$\n$job_tec_hydrorelay_drone_effect_desc$"
+
+concept_tec_district_tec_aqua_mining_regular: "$district_tec_aqua_mining$"
+concept_tec_district_tec_aqua_mining_regular_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining$"
+concept_tec_district_tec_aqua_mining_regular_plural: "$district_tec_aqua_mining_plural$"
+concept_tec_district_tec_aqua_mining_regular_plural_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining_plural$"
+concept_tec_district_tec_aqua_mining_regular_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_reef_miner_add£ $mod_job_tec_reef_miner_add$: §G+1§!\n£mod_job_pearl_diver_add£ $mod_job_pearl_diver_add$: §G+1§!\n\n$job_tec_reef_miner_effect_desc$\n$job_pearl_diver_lithoid_effect_desc$"
+
+concept_tec_district_tec_aqua_mining_hive: "$district_tec_aqua_mining$"
+concept_tec_district_tec_aqua_mining_hive_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining$"
+concept_tec_district_tec_aqua_mining_hive_plural: "$district_tec_aqua_mining_plural$"
+concept_tec_district_tec_aqua_mining_hive_plural_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining_plural$"
+concept_tec_district_tec_aqua_mining_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_reef_drone_add£ $mod_job_tec_reef_drone_add$: §G+1§!\n£mod_job_pearl_diver_add£ $mod_job_pearl_diver_add$: §G+1§!\n\n$job_tec_reef_miner_effect_desc$\n$job_tec_depth_drone_effect_desc$"
