--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -134,11 +134,11 @@ decision_tec_environment_fix:0 "Environmental Restoration"
 # Industrialcorp
  decision_tec_industrialize:0 "Intensify Industrialization"
  decision_tec_industrialize_desc:0 "By integrating our production lines on a global scale, output will skyrocket."
- decision_tec_industrialize_effects:0 "Adds a §Y$d_tec_manufactory$§! feature upon completion, boosting output of £alloys£ §YAlloys§! and £consumer_goods£ §YConsumer Goods§!.\nRemember: accidents do happen!"
+ decision_tec_industrialize_effects:0 "Adds a §Y$d_tec_manufactory$§! feature upon completion, boosting output of $tec_loc_alloys$ and $tec_loc_consumer_goods$.\nRemember: accidents do happen!"
  
  decision_tec_industrialize_arcology:0 "Intensify Industrialization"
  decision_tec_industrialize_arcology_desc:0 "We will transition from a worldwide city to a worldwide factory."
- decision_tec_industrialize_arcology_effects:0 "Adds a §Y$d_tec_manufactory$§! feature upon completion, boosting output of £alloys£ §YAlloys§! and £consumer_goods£ §YConsumer Goods§!.\nRemember: accidents do happen!"
+ decision_tec_industrialize_arcology_effects:0 "Adds a §Y$d_tec_manufactory$§! feature upon completion, boosting output of $tec_loc_alloys$ and $tec_loc_consumer_goods$.\nRemember: accidents do happen!"
  
  
  decision_tec_deindustrialize:0 "Clean Up Industrial Sites"
@@ -178,7 +178,7 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 
  decision_tec_ark_dismantle:0 "Arkship - Dismantle the ark"
  decision_tec_ark_dismantle_desc:0 "A tool for an achievement, and now a tool for progress; whatever composes this ark will be part of the ships and industry of tomorrow."
- decision_tec_ark_dismantle_effects:0 "The ark will be complete and permanently §RDismantled§!, providing a big sum of £alloys£ §YAlloys§!."
+ decision_tec_ark_dismantle_effects:0 "The ark will be complete and permanently §RDismantled§!, providing a big sum of $tec_loc_alloys$."
 
 
 # ----------------------------------------------------------------------------------------
@@ -208,7 +208,7 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 
  #subdecisions
 	decision_tec_science_ecu_motes:0 "Arcology - Motes Labs"
-	decision_tec_science_ecu_motes_desc:0 "We can repurpose exotic materials lab to suit the production of refined £volatile_motes£ §YVolatile Motes§!."
+	decision_tec_science_ecu_motes_desc:0 "We can repurpose exotic materials lab to suit the production of refined $tec_loc_volatile_motes$."
 	decision_tec_science_ecu_motes_effects:0 "Replace any £district£§YExotic materials Lab§! district with £district£§YVolatile Motes Synthesis Labs§!."
 
 	decision_tec_science_ecu_gas:0 "Arcology - Gas Labs"
@@ -216,7 +216,7 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 	decision_tec_science_ecu_gas_effects:0 "Replace any £district£§YExotic materials Lab§! district with £district£§YExotic Gas Synthesis Labs§!."
 
 	decision_tec_science_ecu_crystals:0 "Arcology - Crystal Labs"
-	decision_tec_science_ecu_crystals_desc:0 "We can repurpose exotic materials lab to suit the production of refined£rare_crystals£ §YRare Crystals§!."
+	decision_tec_science_ecu_crystals_desc:0 "We can repurpose exotic materials lab to suit the production of refined$tec_loc_rare_crystals$."
 	decision_tec_science_ecu_crystals_effects:0 "Replace any £district£§YExotic materials Lab§! district with £district£§YCrystal Synthesis Labs§!."
 
 	decision_tec_science_ecu_refinery:0 "Arcology - Generic Labs"
@@ -225,7 +225,7 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 
 
  decision_tec_administration_ecu:0 "Arcology - Administrative Ecumenopolis"
- decision_tec_administration_ecu_desc:0 "By suiting this Ecumenopolis with civilian and administrative equipment, we will make it serve well as a great source of £unity£ §YUnity§! and £consumer_goods£ §YConsumer Goods§!."
+ decision_tec_administration_ecu_desc:0 "By suiting this Ecumenopolis with civilian and administrative equipment, we will make it serve well as a great source of £unity£ §YUnity§! and $tec_loc_consumer_goods$."
  decision_tec_administration_ecu_effects:0 "Equips the Ecumenopolis with civilian and administrative assets, providing access to £unity£ §YAdministrative Districts§! and £consumer_goods£ £district£ §YCivilian Industry Districts§!.\n\n§RDue to the effort used on the further modification of the planet assets and industry, this decision is irreversible.§!"
 	#§YThis ecumenopolis provides a empire unique §G+5%§! increased job output, and this decision can be only enacted once by the empire.§!
 
@@ -253,7 +253,7 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 # ---------------------------------------------------------
 # Ringworld specialization
  decision_tec_basic_ring:0 "Ringworld - Basic Section"
- decision_tec_basic_ring_desc:0 "The modular infrastructure of this ring section can be used to suit large generator, replicators and farms, boosting our production of £trigger_tec_basic_resources£ §YBasic Resources§!."
+ decision_tec_basic_ring_desc:0 "The modular infrastructure of this ring section can be used to suit large generator, replicators and farms, boosting our production of $tec_loc_basic_resources$."
  decision_tec_basic_ring_effects:0 "Equips the Ringworld Section with £trigger_tec_basic_resources£ £district£ §YBasic Resource Districts§!.\n\n§YEach ringworld districts boost the production of the resource produced.§!"
 
  decision_tec_science_ring:0 "Ringworld - Civil Section"
@@ -261,11 +261,11 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
  decision_tec_science_ring_effects:0 "Equips the Ringworld Section with £unity£ §YAdministration Districts§!, £trigger_tec_research£ £district£ §YResearch Districts§!, £volatile_motes£ £exotic_gases£ £rare_crystals£ £district£ §YRefinery Districts§! and £unity£ £amenities£ £district£ §YLeisure/Relay Districts§!.\n\n§YEach ringworld districts boost the production of the resource produced.§!"
 
  decision_tec_fabrication_ring:0 "Ringworld - Fabrication Section"
- decision_tec_fabrication_ring_desc:0 "The modular infrastructure of this ring section can be used to suit fine-tech forges, fabricators or military assets, boosting our production of £alloys£ §YAlloys§!, £consumer_goods£ §YConsumer Goods§! or £mod_country_naval_cap_add£ §YNaval parts§!."
+ decision_tec_fabrication_ring_desc:0 "The modular infrastructure of this ring section can be used to suit fine-tech forges, fabricators or military assets, boosting our production of $tec_loc_alloys$, $tec_loc_consumer_goods$ or £mod_country_naval_cap_add£ §YNaval parts§!."
  decision_tec_industry_ring_effects:0 "Equips the Ringworld Section with £alloys£ £district£ §YForge Districts§!, £consumer_goods£ £district£ §YFabrication Districts§!, £mod_country_naval_cap_add£ £district£ §YNaval Districts§! and £unity£ £amenities£ £district£ §YLeisure/Relay Districts§!.\n\n§YEach ringworld districts boost the production of the resource produced.§!"
 
  decision_tec_cgnaval_ring:0 "Alter Ringworld - Swap Naval/Industry Districts"
- decision_tec_cgnaval_ring_desc:0 "A further customization is possible to interchange £mod_country_naval_cap_add£ §YNaval parts§! and £consumer_goods£ §YConsumer Goods§! production."
+ decision_tec_cgnaval_ring_desc:0 "A further customization is possible to interchange £mod_country_naval_cap_add£ §YNaval parts§! and $tec_loc_consumer_goods$ production."
  decision_tec_cgnaval_ring_effects:0 "Mutually replace £district£ §YNaval Districts§! with £district£ §YIndustry Districts§! or vice versa."
 
  decision_tec_administration_ring:0 "Ringworld - Administrative Section"
@@ -340,18 +340,18 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 # Gestalt overconsumption
  decision_tec_overstrip_energy:0 "Overstrip - Energy"
  decision_tec_overstrip_energy_desc:0 "By removing a large part of useless bio and lithosphere we can accommodate large energy installations that will suit our empire production well."
- decision_tec_overstrip_energy.tooltip:0 "Strips a considerable part of this world £minerals£ £food£ §YNatural resources§! to improve £energy£ §YEnergy§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
- decision_tec_overstrip_energy_effects:0 "Strips a considerable part of this world £minerals£ £food£ §YNatural resources§! to improve £energy£ §YEnergy§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_energy.tooltip:0 "Strips a considerable part of this world £minerals£ £food£ §YNatural resources§! to improve $tec_loc_energy$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_energy_effects:0 "Strips a considerable part of this world £minerals£ £food£ §YNatural resources§! to improve $tec_loc_energy$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
 
  decision_tec_overstrip_mining:0 "Overstrip - Minerals"
  decision_tec_overstrip_mining_desc:0 "The best minerals can be acquired only with a raw effort on cracking, stripping and removing large extensions of terrain, and so we will do it."
- decision_tec_overstrip_mining.tooltip:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve £minerals£ §YMineral§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
- decision_tec_overstrip_mining_effects:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve £minerals£ §YMineral§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_mining.tooltip:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve $tec_loc_minerals$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_mining_effects:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve $tec_loc_minerals$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
 
  decision_tec_overstrip_food:0 "Overstrip - Food"
  decision_tec_overstrip_food_desc:0 "All land can be productive and give us large amount of biomass if we encourage the production of new lifeforms and that will use the terrain aggressively for providing us with more natural resources."
- decision_tec_overstrip_food.tooltip:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve £food£ §YFood§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
- decision_tec_overstrip_food_effects:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve £food£ §YFood§! production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_food.tooltip:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve $tec_loc_food$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
+ decision_tec_overstrip_food_effects:0 "Strips a considerable part of this world £energy£ £food£ §YNatural resources§! to improve $tec_loc_food$ production.\n\n§HThis decision can be enacted only three times on a planet, and after a Overstrip is done twice only the same overstrip can be done a third time.§!\n\n"
 
  decision_tec_overstrip_housing:0 "Overstrip - Housing"
  decision_tec_overstrip_housing_desc:0 "The first priority is suiting our production with adequate spaces for maintenance and restoring, so any redundant natural resource may be taken out of our path and replaced with efficient living spaces."
@@ -399,7 +399,7 @@ decision_tec_lifeseeded_gaia_desc:0 "Using our own essence, we can make this pla
 # Desiccators
  decision_tec_desiccate_planet:0 "Hydrological Desiccation"
  decision_tec_desiccate_planet_desc:0 "Using our extractors, we will accelerate the process of extracting resources from this planet, at the cost of gradually damaging its atmosphere."
- decision_tec_desiccate_planet_effects:0 "Extracts a big part of the planet Hydrosphere, §YDesiccating§! the planet in the process, increasing £amenities£ §YAmenities§! usage and severely reducing £pop£ §YHabitability§!, transforming all the £building£ §Y$building_tec_machine_anglers_extractor$§! into £building£ §Y$building_tec_machine_anglers_extractor_on$§!, which produce way more £energy£ §YEnergy§!, and moving the extracted moisture to our £building£ §Y$building_tec_machine_anglers_nexus_A$§!.\n\n§YAfter this decision is done four times, the planet will be rendered unsuitable for any kind of complex or synthetic life.§!"
+ decision_tec_desiccate_planet_effects:0 "Extracts a big part of the planet Hydrosphere, §YDesiccating§! the planet in the process, increasing £amenities£ §YAmenities§! usage and severely reducing £pop£ §YHabitability§!, transforming all the £building£ §Y$building_tec_machine_anglers_extractor$§! into £building£ §Y$building_tec_machine_anglers_extractor_on$§!, which produce way more $tec_loc_energy$, and moving the extracted moisture to our £building£ §Y$building_tec_machine_anglers_nexus_A$§!.\n\n§YAfter this decision is done four times, the planet will be rendered unsuitable for any kind of complex or synthetic life.§!"
  decision_tec_desiccate_planet_nexus:0 "£trigger_no£ §RRequires a £building£ $building_tec_machine_anglers_nexus_A$ constructed in other colony.§!"
  decision_tec_desiccate_planet_extractor:0 "£trigger_no£ §RRequires at least one £building£ $building_tec_machine_anglers_extractor$ or $building_tec_machine_anglers_extractor_on$ constructed.§!"
 
