--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -42,8 +42,8 @@
  edict_diversity_utopia_desc:0 " "
  edict_pan_galactic_league:0 "Pan-Galactic League"
  edict_pan_galactic_league_desc:0 " "
- edict_patriotic_call:0 "Patriotic Call"
- edict_patriotic_call_desc:0 " "
+edict_patriotic_call:0 "Patriotic Call"
+edict_patriotic_call_desc:0 "To Arms! Your Nation Needs You In This Dark Hour!"
  edict_logistic_operations:0 "Logistic Operations"
  edict_logistic_operations_desc:0 " "
  edict_strategic_taxation:0 "Strategic Taxation"
@@ -325,7 +325,7 @@ policy_industrial:0 "Environmental Regulation"
 
  industrial_efficiency:0 "Increased Regulations"
  industrial_efficiency_name:0 "Increased Regulations"
- industrial_efficiency_desc:0 "While our empire must continue growing and we must ensure our society stability and room to develop, we must also care the environment and the limited resources at our disposal by making more efficient and clean industries.\n\n§E£rare_crystals£ §YTranslucers§!, £volatile_motes£ §YChemists§! and £exotic_gases£ §YGas Refiners§! consume §G25%§! less £minerals£ §YMinerals§! to produce advanced resources.§!"
+ industrial_efficiency_desc:0 "While our empire must continue growing and we must ensure our society stability and room to develop, we must also care the environment and the limited resources at our disposal by making more efficient and clean industries.\n\n§E£rare_crystals£ §YTranslucers§!, £volatile_motes£ §YChemists§! and £exotic_gases£ §YGas Refiners§! consume §G25%§! less $tec_loc_minerals$ to produce advanced resources.§!"
 
 
  policy_recycling:0 "Infrastructural Fabrication"
@@ -446,27 +446,27 @@ policy_interstellar_media:0 "Mass Media"
 
 trade_policy_infrastructure:0 "Infrastructure Development"
  trade_conversion_infrastructure_name:0 "Infrastructure Development"
- trade_policy_infrastructure_desc:0 "A big effort must be made in order to ensure our development as empire, and assembling a proper infrastructure is the top priority; economically, we must focus our trade efforts towards it.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.25§! £energy£ and enhances our productive capabilities.§!\n\n"
+ trade_policy_infrastructure_desc:0 "A big effort must be made in order to ensure our development as empire, and assembling a proper infrastructure is the top priority; economically, we must focus our trade efforts towards it.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.25§! £energy£ and enhances our productive capabilities.§!\n\n"
 
  trade_policy_social:0 "Social Development"
  trade_conversion_social_name:0 "Social Development"
- trade_policy_social_desc:0 "No matter how harsh or difficult is our growth as empire, we must always remember that we aren't a whole without our parts, a society without our citizens, so all economic efforts must be invested into ensuring education, innovation and study of each possible way to improve our way of living.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.25§! £energy£, §Y0.25§! £unity£ and §Y0.25§! £society£, with the remaining enhancing our civilian colony development.§!\n\n"
+ trade_policy_social_desc:0 "No matter how harsh or difficult is our growth as empire, we must always remember that we aren't a whole without our parts, a society without our citizens, so all economic efforts must be invested into ensuring education, innovation and study of each possible way to improve our way of living.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.25§! £energy£, §Y0.25§! £unity£ and §Y0.25§! £society£, with the remaining enhancing our civilian colony development.§!\n\n"
 
 trade_policy_innovation:0 "Innovation & Progress"
  trade_conversion_innovation_name:0 "$trade_policy_innovation$"
- trade_policy_innovation_desc:0 "The unknown holds infinite quantities of knowledge we need to discover in order to progress, so a big investment into all kind of research fields will lead us forward.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.25§! £energy£ and §Y0.15§! of £physics£ , £society£ and £engineering£§!"
+ trade_policy_innovation_desc:0 "The unknown holds infinite quantities of knowledge we need to discover in order to progress, so a big investment into all kind of research fields will lead us forward.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.25§! £energy£ and §Y0.15§! of £physics£ , £society£ and £engineering£§!"
 
 trade_policy_militarized:0 "Economic Militarism"
  trade_conversion_militarized_name:0 "Economic Militarism"
- trade_policy_militarized_desc:0 "The unknown holds infinite quantities of knowledge we need to discover in order to progress, so a big investment into all kind of research fields will lead us forward.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.25§! £energy£, with the remaining enhancing our strategic military development.§!"
+ trade_policy_militarized_desc:0 "The unknown holds infinite quantities of knowledge we need to discover in order to progress, so a big investment into all kind of research fields will lead us forward.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.25§! £energy£, with the remaining enhancing our strategic military development.§!"
 
 trade_policy_food:0 "Agricultural Development"
  trade_conversion_food_name:0 "$trade_policy_innovation$"
- trade_policy_food_desc:0 "Some may think the simplest tasks are irrelevant, but we shouldn't get it wrong; In the hands of our farmers and biomass productions we make the first step for consolidate the foundation of our society; without rations, food or biomass for later production, we would starve, so investing on it would bear positive results.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.3§! £energy£ and §Y0.4§! £food£§!"
+ trade_policy_food_desc:0 "Some may think the simplest tasks are irrelevant, but we shouldn't get it wrong; In the hands of our farmers and biomass productions we make the first step for consolidate the foundation of our society; without rations, food or biomass for later production, we would starve, so investing on it would bear positive results.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.3§! £energy£ and §Y0.4§! £food£§!"
 
 trade_policy_mining:0 "Mining Subsidizing"
  trade_conversion_mining_name:0 "Mining Subsidizing"
- trade_policy_mining_desc:0 "With neoconcrete and alloys we build a future, but we must remind those are extracted and produced by brave and hardworking citizens and advanced machines with a great cost. Investing in our mining field may ensure safety of our workers and a better use of the finest technologies.\n\n§EEach collected £trade_value£ §YTrade Value§! earns us §Y0.3§! of £energy£ and §Y0.4§! £minerals£§!."
+ trade_policy_mining_desc:0 "With neoconcrete and alloys we build a future, but we must remind those are extracted and produced by brave and hardworking citizens and advanced machines with a great cost. Investing in our mining field may ensure safety of our workers and a better use of the finest technologies.\n\n§EEach collected §Y$tec_loc_trade_value$§! earns us §Y0.3§! of £energy£ and §Y0.4§! £minerals£§!."
 
 policy_economic_policy:1 "Production Focus"
 
@@ -638,15 +638,12 @@ edict_noesnadaporqueasiagrupo:0 "aa"
  allow_edict_doctrine_loyalty:0 "Unlocks country edict §YDoctrine: Thought Control§!: increase §YGovernment Ethic Attraction§!, §YArmy Morale§! and §YInfluence Gain§!, reduce potential §YUnrest§! and decrease §YResearch Speed§! and §YEnergy Gain§!. Unlocks §YWill to Power§! technology research option." 
 
 
- edict_voice_planet_2.tooltip:0 "The decision removes unfortunate environmental planetary modifiers, such as: §YUnstable Tectonics§!, §YWeak Magnetic Field§!, §YTidal Locked§!, §YIrradiated Planet§!, §YDamaged Ecology§!, §YWasteland radiation§!, §YAbandoned terraforming§!." 
- edict_voice_planet_1.tooltip:0 "The decision removes unfortunate environmental planetary modifiers, such as: §YDangerous Wildlife§!, §YBleak§!, §YHazardous Weather§!, §YWild Storms§!." 
-
-
-
  edict_div_crusade:0 "$unity_ambition$ Divine Crusade"
  edict_div_crusade_desc:0 "Unholy Infidels will be perished once and for all!"
 
 
+edict_immortal_ruler:0 "Declare Immortal Ruler"
+edict_immortal_ruler_desc:0 "Invoking this edict will claim our current Ruler as Immortal."
 
 
 
@@ -1078,22 +1075,22 @@ policy_goods_policy:0 "Consumer Goods Production"
  researchfocus_balanced:0 "Distributed Research"
  researchfocus_balanced_desc:0 "For the development of our society, we must approach every kind of technology with the same thoroughnes and rigor.\n\n§EAll £trigger_tec_research£ §Yresearch§! will be produced with no specific focus.§!"
 
- researchfocus_physics:0 "£physics£ $physics_research$ Focus"
+ researchfocus_physics:0 "$tec_loc_physics$ Focus"
  researchfocus_physics_desc:0 "The wonders of the physical properties of the universe will be the keys of progress.\n\n§EAll £physics£ §Yresearch§! will be produced faster than £society£ £engineering£, which will be produced at a slightly less rate.§!"
 
- researchfocus_physics_fanatic:0 "£physics£ $physics_research$ Rush"
+ researchfocus_physics_fanatic:0 "$tec_loc_physics$ Rush"
  researchfocus_physics_fanatic_desc:0 "Discovering and dominating the principles that conform our universe will make us dominate and shape the reality itself.\n\n§EAll £physics£ §Yresearch§! will be produced way faster than £society£ £engineering£, which will be produced at a lower rate.§!"
 
- researchfocus_society:0 "£society£ Society Focus"
+ researchfocus_society:0 "$tec_loc_society$ Focus"
  researchfocus_society_desc:0 "The first step of transcendental evolution is making double effort in our understanding as individuals and society.\n\n§EAll £society£ §Yresearch§! will be produced faster than £physics£ £engineering£, which will be produced at a slightly lower rate.§!"
 
- researchfocus_society_fanatic:0 "£society£ Society Rush"
+ researchfocus_society_fanatic:0 "$tec_loc_society$ Rush"
  researchfocus_society_fanatic_desc:0 "There is no more important step than progressing as society, discovering new technology that will benefit further lines of research and will greatly benefit our growth.\n\n§EAll £society£ §Yresearch§! will be produced way faster than £physics£ £engineering£, which will be produced at a lower rate.§!"
 
- researchfocus_engineering:0 "£engineering£ Engineering Focus"
+ researchfocus_engineering:0 "$tec_loc_engineering$ Focus"
  researchfocus_engineering_desc:0 "Space is the last frontier, and what we create are the vessels in which we will cross the great void.\n\n§EAll £engineering£ §Yresearch§! will be produced faster than £physics£ £society£, which will be produced at a slightly lower rate.§!"
 
- researchfocus_engineering_fanatic:0 "£engineering£ Engineering Rush"
+ researchfocus_engineering_fanatic:0 "$tec_loc_engineering$ Rush"
  researchfocus_engineering_fanatic_desc:0 "Our imperative as society is to create, to develop and to find a place in the universe, so our efforts to create and engine new vessels, new industry, new tools will be our way of proving we are worth of the knowledge that lies ahead.\n\n§EAll £engineering£ §Yresearch§! will be produced way faster than £physics£ £society£, which will be produced at a lower rate.§!"
 
 
@@ -1131,13 +1128,13 @@ policy_goods_policy:0 "Consumer Goods Production"
  researchfocus_balanced_introspe:0 "Balanced Research"
  researchfocus_balanced_introspe_desc:0 "For the development as a coherent mind, we must approach every kind of technology with the same thoroughnes and rigor.\n\n§EAll £trigger_tec_research£ §Yresearch§! will be produced with no specific focus.§!"
 
- researchfocus_physics_introspe:0 "£physics£ $physics_research$ Rush"
+ researchfocus_physics_introspe:0 "$tec_loc_physics$ Rush"
  researchfocus_physics_introspe_desc:0 "Discovering and dominating the principles that conform our universe will make us dominate and shape the reality itself.\n\n§EAll £physics£ §Yresearch§! will be produced way faster than £society£ £engineering£, which will be produced at a lower rate.§!"
 
  researchfocus_society_introspe:0 "£society£ Society Rush"
  researchfocus_society_introspe_desc:0 "There is no more important step than progressing as a collective, discovering new technology that will benefit further lines of research and will greatly benefit our growth.\n\n§EAll £society£ §Yresearch§! will be produced way faster than £physics£ £engineering£, which will be produced at a lower rate.§!"
 
- researchfocus_engineering_introspe:0 "£engineering£ $engineering_research$ Rush"
+ researchfocus_engineering_introspe:0 "$tec_loc_engineering$ Rush"
  researchfocus_engineering_introspe_desc:0 "Our imperative as collective is to create, to develop and to find a place in the universe, so our efforts to create and engine new vessels, new industry, new tools will be our way of proving we are worth of the knowledge that lies ahead.\n\n§EAll £engineering£ §Yresearch§! will be produced way faster than £physics£ £society£, which will be produced at a lower rate.§!"
 
 
@@ -1258,11 +1255,11 @@ policy_goods_policy:0 "Consumer Goods Production"
 
  tec_replicant_food_name:0 "Replicant Bioreprocessing"
  tec_replicant_food:0 "Bioreprocessing"
- tec_replicant_food_desc:0 "Biomatter and organic consumption will make our people happy, as no distinction from regular organics will be done.\n\n§EReplicants will consume 0.5 £food£ Food and 0.5 £energy£ Energy as upkeep."
+ tec_replicant_food_desc:0 "Biomatter and organic consumption will make our people happy, as no distinction from regular organics will be done.\n\n§EReplicants will consume 0.5 £food£ Food and 0.5 $tec_loc_energy$ as upkeep."
 
  tec_replicant_minerals_name:0 "Replicant Lithoreprocessing"
  tec_replicant_minerals:0 "Lithoreprocessing"
- tec_replicant_minerals_desc:0 "A lithoid-like diet will boost the internal cellular components of our people happy, sating energetic and mineral requirements.\n\n§EReplicants will consume 0.5 £minerals£ Minerals and 0.5 £energy£ Energy as upkeep."
+ tec_replicant_minerals_desc:0 "A lithoid-like diet will boost the internal cellular components of our people happy, sating energetic and mineral requirements.\n\n§EReplicants will consume 0.5 $tec_loc_minerals$ and 0.5 $tec_loc_energy$ as upkeep."
 
 
  policy_tec_replicant_assimilation_policy:0 "Replicant Assimilation"
@@ -1339,3 +1336,27 @@ policy_religious_cult_policy_slider:0 "---- £job_priest£ §EReligious Cult Pol
  slider_a_desc:0 "SLIDER HIDDEN A"
  slider_b:0 "SLIDER HIDDEN B"
  slider_b_desc:0 "SLIDER HIDDEN B"
+
+
+
+policy_minimal_wage:0 "Minimum Wage"
+policy_minimal_wage_desc:0 " "
+
+minimal_wage_moderate:0 "Moderate"
+minimal_wage_moderate_name:0 "Moderate"
+minimal_wage_moderate_desc:0 " "
+
+minimal_wage_increased:0 "Increased"
+minimal_wage_increased_name:0 "Increased"
+minimal_wage_increased_desc:0 " "
+
+minimal_wage_reduced:0 "Reduced"
+minimal_wage_reduced_name:0 "Reduced"
+minimal_wage_reduced_desc:0 " "
+
+
+enslavement_00:0 "Not specified"
+enslavement_00_name:0 "Not specified"
+enslavement_00_desc:0 " "
+
+
