--- a/localisation/english/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_planets_modifiers_l_english.yml
@@ -1,4 +1,19 @@
 ﻿l_english:
+
+pm_tec_pragmatic_development_1:0 "Pragmatic Development I"
+pm_tec_pragmatic_development_1_desc:0 "Increase the planet's size by 1 tile, reducing it's §YHabitability§! by 2%."
+pm_tec_pragmatic_development_2:0 "Pragmatic Development II"
+pm_tec_pragmatic_development_2_desc:0 "Increase the planet's size by 1 tile, reducing it's §YHabitability§! by 3%."
+
+
+ modifier_tec_unity_patrons:0 "Patronage Legacy"
+ modifier_tec_unity_patrons_desc:0 " "
+
+
+modifier_tec_glorious_fleet:0 "Glorious Victory!"
+unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
+
+
 # = = = = = = = = = = = = = = = = = = = = = = = = 
 #MEGAS
 # = = = = = = = = = = = = = = = = = = = = = = = = 
