--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -64,7 +64,7 @@
 	tech_tec_livingmetalproduction:0 "Living Metal Replication"
 	tech_tec_livingmetalproduction_desc:0 "Advanced studios in nanotechnology and biopolymers allow a relatively easy but resource intensive way to create and mold a near identical version of a living, flexible and adaptable metal."
 	tech_tec_allow_livingmetalforges:0 "§HUnlocks Building:§! Living Metal Farm"
-	tech_tec_allow_livingmetalforges_desc:0 "§HLiving Metal farm:§!\nEfficient building that convert £alloys£ Alloys and £energy£ Energy Resources into £sr_living_metal£ Living Metal."
+	tech_tec_allow_livingmetalforges_desc:0 "§HLiving Metal farm:§!\nEfficient building that convert £alloys£ Alloys and $tec_loc_energy$ Resources into £sr_living_metal£ Living Metal."
 
 	tech_tec_naniteproduction:0 "Nanorrobotic Serialization"
 	tech_tec_naniteproduction_desc:0 "Years of study of miniaturization, heat dissipation and advanced AI development had the result of creating semi-autonomous and self-replicating nanobots with a myriad of uses, each one with integrated killed switches for safety messures."
@@ -268,13 +268,13 @@
 	tech_tec_bt_2_bioalloys:0 "Organic Poly-alloys"
 	tech_tec_bt_2_bioalloys_desc:0 "To do " # Redact Lore
 	TECH_UNLOCK_TEC_BT_2_BIOALLOYS_TITLE:0 "§HUnlocks breakthrough:§! Bioalloys"	# R
-	TECH_UNLOCK_TEC_BT_2_BIOALLOYS_DESC:0 "§HBioalloys§!\nUnlocks a country policy that allows £alloys£ Metallurgist jobs have a mixed production of £alloys£ §YAlloys§! combining £food£ Food and £minerals£ Minerals.\n\nCatalytic Processors produce 1 extra alloys with 2 extra food cost with this decision enacted.\n\n"
+	TECH_UNLOCK_TEC_BT_2_BIOALLOYS_DESC:0 "§HBioalloys§!\nUnlocks a country policy that allows £alloys£ Metallurgist jobs have a mixed production of $tec_loc_alloys$ combining £food£ Food and $tec_loc_minerals$.\n\nCatalytic Processors produce 1 extra alloys with 2 extra food cost with this decision enacted.\n\n"
 	# Add catalytic jobs extra production
 
 	tech_tec_bt_3_bioreactor:0 "Advanced Biorreactors"
 	tech_tec_bt_3_bioreactor_desc:0 "To do " # Redact Lore
 	TECH_UNLOCK_TEC_BT_3_BIORREACTOR_TITLE:0 "§HUnlocks breakthrough:§! Advanced Biorreactors"	# R
-	TECH_UNLOCK_TEC_BT_3_BIORREACTOR_DESC:0 "§HAdvanced Biorreactors§!\nUnlocks alternative Biorreactors that either produce energy automatically in a more efficient way, or make £job_farmer£ Farming Jobs produce £energy£ Energy per £building£ §YConnected Biorreactor grid§!.\nAny existing Biorreactor will be replaced by the upgraded version.\n\n"
+	TECH_UNLOCK_TEC_BT_3_BIORREACTOR_DESC:0 "§HAdvanced Biorreactors§!\nUnlocks alternative Biorreactors that either produce energy automatically in a more efficient way, or make £job_farmer£ Farming Jobs produce $tec_loc_energy$ per £building£ §YConnected Biorreactor grid§!.\nAny existing Biorreactor will be replaced by the upgraded version.\n\n"
 
 	tech_tec_bt_4_a:0 "A"
 	tech_tec_bt_4_a_desc:0 "To do "
@@ -324,7 +324,7 @@
 	tech_tec_bt_13_matterreplicator:0 "Matter Micro-Replication"
 	tech_tec_bt_13_matterreplicator_desc:0 "To do " # Redact Lore
 	TECH_UNLOCK_BT_13_TEC_MATTERREPLICATOR_TITLE:0 "§HUnlocks breakthrough:§! Matter Micro-Replication"
-	TECH_UNLOCK_BT_13_TEC_MATTERREPLICATOR_DESC:0 "§HMatter Micro-Replication§!\nUnlocks the ability to create £building£ §YMatter Replicator§! buildings on any planet, using high amount of £energy£ Energy to synthesize £minerals£ Minerals.\n\n"
+	TECH_UNLOCK_BT_13_TEC_MATTERREPLICATOR_DESC:0 "§HMatter Micro-Replication§!\nUnlocks the ability to create £building£ §YMatter Replicator§! buildings on any planet, using high amount of $tec_loc_energy$ to synthesize $tec_loc_minerals$.\n\n"
 
 
  # --------------- Utility use
