--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -75,7 +75,7 @@
 	tr_tec_outreach_final_2_disabled_delayed:0 "$tr_tec_outreach_final_2_delayed$"
 
 	tr_tec_outreach_final_3:0 "Pathfinder Initiative"
-	tr_tec_outreach_final_3_text:0 "Standard Colony ships only cost £alloys£ §YAlloys§!, or a reduced cost of both §YAlloys and basic resources§! for certain empires.\nColonizer Build Speed: §G+75%§!"
+	tr_tec_outreach_final_3_text:0 "Standard Colony ships only cost $tec_loc_alloys$, or a reduced cost of both §YAlloys and basic resources§! for certain empires.\nColonizer Build Speed: §G+75%§!"
 	tr_tec_outreach_final_3_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_outreach_final_3_text$"
 	tr_tec_outreach_final_3_delayed:0 "Not only we should boost out colonial reach, but we must also put in direct disposition and cover any need that the effort supposes, so external investments and reserves will be saved to dramatically increase the assembly speed of both ships, and teams, for new colonies and discoveries."
 
