--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -240,8 +240,8 @@
 	ap_the_flesh_is_weak_gestalt_desc:0 "With the creation of new potential cybernetic bodily replacements for our drones, we can improve their efficiency and connection with our collective."
 
  # ---- Effects
-	ap_tec_the_flesh_is_weak_regular_tooltip:0 "We will prepare a special project to enhance our species with mandatory §ECybernetic implants§!,replacing half the £food£ £minerals£ base species upkeep with £energy£ Energy."
-	ap_tec_the_flesh_is_weak_regular_tooltip_discovered:0 "We will prepare a special project to enhance our species with mandatory §ECybernetic implants§!, gaining the §ECybernetic§! trait.\nThe Cybernetic trait provide £job£ Job output, £pop£ Leader Lifespan, and £mod_pop_environment_tolerance£ Habitability bonuses and §HSpecial traits§! for our leaders, replacing half the £food£ £minerals£ base species upkeep with £energy£ Energy."
+	ap_tec_the_flesh_is_weak_regular_tooltip:0 "We will prepare a special project to enhance our species with mandatory §ECybernetic implants§!,replacing half the £food£ £minerals£ base species upkeep with $tec_loc_energy$."
+	ap_tec_the_flesh_is_weak_regular_tooltip_discovered:0 "We will prepare a special project to enhance our species with mandatory §ECybernetic implants§!, gaining the §ECybernetic§! trait.\nThe Cybernetic trait provide £job£ Job output, £pop£ Leader Lifespan, and £mod_pop_environment_tolerance£ Habitability bonuses and §HSpecial traits§! for our leaders, replacing half the £food£ £minerals£ base species upkeep with $tec_loc_energy$."
 
 	ap_tec_the_flesh_is_weak_cyborg_tooltip:0 "We will prepare a special project to enhance our §ECybernetic implants§!, making them more efficient and allowing our drones to be faster, better and stronger, also providing §HSpecial traits§! for our leaders."
 
@@ -709,7 +709,10 @@
 	tec_ap_grasp_the_void_bonus_effects:0 "§YStarbase Production Modules§! no longer reduce the §YStarbase Hull Integrity§! and actually boost the §YStarbase Hull Integrity§!.\n§YStarbase Production Buildings§! provide §YProduction Bonuses§! to the system."
 
 	tec_ap_starbases_2_steps:0 "\n\n§HTier II - Starbase Path Finisher§!"
+# culure rework
 
+	ap_future_society:0 "Future Society"
+	ap_future_society_desc:0 "Our society has reached an unsurpassed level of cultural development."
 # Initial APs
 	ap_one_vision:0 "One Vision"
 	ap_one_vision_desc:0 "True unity is achieved only when the ultimate goals of a nation and its people are one and the same. After all, a house divided against itself cannot stand."
@@ -2667,7 +2670,7 @@ tech_reverse_advanced_dome: " "
 	tec_cyberpsionic_path.30063.name:0 "Dimensional Extraction"
 	tec_cyberpsionic_path.30063.desc:0 "By projecting phase-materials with intense energy and psionic waves, we are now able to create small rifts in reality, specific impermeable membranes of entropy that allow not only a more intense connection with the psionic dimension of the shroud, but also extract part of the endless energy residing there."
 	tec_cyberpsionic_path.30063.a:0 "No dimension is out of our reach!"
-	tec_cyberpsionic_path.30063.a.tooltip:0 "We are now able to build £building£ §Y$building_tec_cyberpsionic_extractor_1_plural$§! in our planets. $building_tec_cyberpsionic_extractor_1_plural$ are able to extract the entropic energy of the shroud, converting it into £energy£ Energy and £sr_zro£ Zro."
+	tec_cyberpsionic_path.30063.a.tooltip:0 "We are now able to build £building£ §Y$building_tec_cyberpsionic_extractor_1_plural$§! in our planets. $building_tec_cyberpsionic_extractor_1_plural$ are able to extract the entropic energy of the shroud, converting it into $tec_loc_energy$ and £sr_zro£ Zro."
 
  # After completing all
 	tec_cyberpsionic_path.30065.name:0 "A New Era"
@@ -3342,7 +3345,7 @@ tech_reverse_advanced_dome: " "
 	ap_tec_cybernetic_fascination:0 "Cybernetic Fascination"
 	ap_tec_cybernetic_fascination_desc:0 "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
 	ap_tec_cybernetic_fascination_tooltip:0 "Available: $POINTS|0=+$\n§HUnlock §YCybernetic Enhancements§! for your species, that will replace and enhance positive or negative traits.§!\nAvailable Cybernetic Enhancements:§G +2§!\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: $COST_MULT|%0=-$"
-	ap_tec_cybernetic_fascination_tooltip:0 "Allows a small amount of §YCybernetic Enhancements§!, affordable and specialized traits that requires the use a Cybernetic §YEndo§! or §YExo§! skeleton, and increases the species £energy£ Energy upkeep."
+	ap_tec_cybernetic_fascination_tooltip:0 "Allows a small amount of §YCybernetic Enhancements§!, affordable and specialized traits that requires the use a Cybernetic §YEndo§! or §YExo§! skeleton, and increases the species $tec_loc_energy$ upkeep."
  tec_cybernetic_fascination_traits:0 "Unlocks a small amount of §YCybernetic enhancements§!, that will replace existing traits, requiring a §YCybernetic Endo or Exoskeleton§! to be functional."
 	ap_tec_cybernetic_fascination_steps:0 "\n\n§HTier II - Cybernetic Ascension path§!"
 
@@ -3356,7 +3359,7 @@ tech_reverse_advanced_dome: " "
  TECH_UNLOCK_CYBERNETIC_2_TITLE:0 "§HImproves Feature:§! Cybernetic Enhancements"
  TECH_UNLOCK_CYBERNETIC_2_MACHINE_DESC:0 "§H$trait_tec_cyborg_endo_2$§! : Perfect internal cybernetic enhancements that increases the amount of §YSpecies trait points§! while greatly augmenting the species §YCapacities§!.\n."
 
- OLD_ap_tec_cybernetic_revolution_tooltip:0 "Unlocks a perfected §YCybernetic Endoskeleton§! and all the possible §YAdvanced Cybernetic Enhancements§!.\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-25%§!\nCybernetic enhancements £energy£ Energy upkeep: §G-50%§!"
+ OLD_ap_tec_cybernetic_revolution_tooltip:0 "Unlocks a perfected §YCybernetic Endoskeleton§! and all the possible §YAdvanced Cybernetic Enhancements§!.\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-25%§!\nCybernetic enhancements $tec_loc_energy$ upkeep: §G-50%§!"
 # /
 # Old Replicant
 	tec_replicant_path.398.name:0 "Synthetic Replicants"
