--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -27,29 +27,36 @@
 	TEC_EVOLVED_DONATIONS:0 "If you enjoyed this mod, consider supporting it! £unity£"
 
 # --------------------------- SCRIPTED LOC --------------------------------
-	tec_loc_energy:0 "£energy£ §YEnergy§!"
-	tec_loc_minerals:0 "£minerals£ §YMinerals§!"
-	tec_loc_food:0 "£food£ §YFood§!"
-	tec_loc_alloys:0 "£alloys£ §YAlloys§!"
-	tec_loc_consumer_goods:0 "£consumer_goods£ §YConsumer Goods§!"
-	tec_loc_unity:0 "£unity£ §YUnity§!"
+	tec_loc_energy:0 "£energy£ §Y$energy$§!"
+	tec_loc_minerals:0 "£minerals£ §Y$minerals$§!"
+	tec_loc_food:0 "£food£ §Y$food$§!"
+	tec_loc_alloys:0 "£alloys£ §Y$alloys$§!"
+	tec_loc_consumer_goods:0 "£consumer_goods£ §Y$consumer_goods$§!"
+	tec_loc_unity:0 "£unity£ §Y$unity$§!"
 
 	tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
 	tec_loc_alloys_and_minerals:0 "$tec_loc_alloys$ and $tec_loc_minerals$"
 	tec_loc_alloys_and_food:0 "$tec_loc_alloys$ and $tec_loc_food$"
 
 	tec_loc_food_or_minerals:0 "$tec_loc_food$ or $tec_loc_minerals$"
+	tec_loc_food_and_minerals:0 "$tec_loc_food$ or $tec_loc_minerals$"
 
-	tec_loc_basic_resources:0 "£trigger_tec_basic_resources£ §YBasic Resources§!"
-	tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ §YIndustrial Resources§!"
+	tec_loc_basic_resources:0 "$tec_loc_basic_resources$"
+	tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ §YManufactured Resources§!"
+
+
+	tec_loc_engineering:0 "£engineering£ §Y$engineering_research$§!"
+	tec_loc_society:0 "£society£ §Y$society_research$§!"
+	tec_loc_physics:0 "£physics£ §Y$physics_research$§!"
 	tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
 
- tec_loc_rare_crystals:0 "£rare_crystals£ $rare_crystals$"
- tec_loc_exotic_gases:0 "£exotic_gases£ $exotic_gases$"
- tec_loc_volatile_motes:0 "£volatile_motes£ $volatile_motes$"
- tec_loc_minor_artifacts:0 "£minor_artifacts£ $minor_artifacts$"
+ tec_loc_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
+ tec_loc_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
+ tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
+ tec_loc_minor_artifacts:0 "£minor_artifacts£ $§Yminor_artifacts$§!"
 
  # Fake resource locs
+	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
